@@ -44,7 +44,7 @@ PKG_CHECK_MODULES([GNOME_SHARP_20], [gnome-sharp-2.0])
 PKG_CHECK_MODULES([GTK_DOTNET_20], [gtk-dotnet-2.0])
 PKG_CHECK_MODULES([EVOLUTION_SHARP], [evolution-sharp])
 PKG_CHECK_MODULES([NOTIFY_SHARP], [notify-sharp])
-#PKG_CHECK_MODULES([GTK2], [gtk+-2.0])
+PKG_CHECK_MODULES([AVAHI_SHARP], [avahi-sharp])
 
 
 AC_ARG_ENABLE(debug,
