@@ -18,6 +18,8 @@
     <File name="./src/Logger.cs" subtype="Code" buildaction="Compile" />
     <File name="./src/Utilities.cs" subtype="Code" buildaction="Compile" />
     <File name="./src/Defines.cs.in" subtype="Code" buildaction="Nothing" />
+    <File name="./src/GiverService.cs" subtype="Code" buildaction="Compile" />
+    <File name="./src/TrayLib.cs" subtype="Code" buildaction="Compile" />
   </Contents>
   <MonoDevelop.Autotools.MakefileInfo IntegrationEnabled="True" RelativeMakefileName="./Makefile.am">
     <BuildFilesVar />
