@@ -32,7 +32,8 @@ ASSEMBLIES =  \
 	$(GNOME_SHARP_20_LIBS) \
 	$(GTK_DOTNET_20_LIBS) \
 	$(EVOLUTION_SHARP_LIBS) \
-	$(NOTIFY_SHARP_LIBS) 
+	$(NOTIFY_SHARP_LIBS) \
+	$(AVAHI_SHARP_LIBS) 
 
 $(TARGET): $(CSFILES) Defines.cs
 	$(CSC) -out:$@ $(CSFLAGS) $^ $(ASSEMBLIES) $(RESOURCES)
